--- a/flutter-productos-app-seccion-14/web/manifest.json
+++ b/flutter-productos-app-seccion-14/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "productos_app",
-    "short_name": "productos_app",
+    "name": "movisoft_app",
+    "short_name": "movisoft_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Proyecto de seguimiento de movilidad.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
