--- a/flutter-productos-app-seccion-14/ios/Runner/Info.plist
+++ b/flutter-productos-app-seccion-14/ios/Runner/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>productos_app</string>
+	<string>movisoft_app</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
