--- a/flutter-productos-app-seccion-14/pubspec.yaml
+++ b/flutter-productos-app-seccion-14/pubspec.yaml
@@ -1,4 +1,4 @@
-name: productos_app
+name: movisoft_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
